# personal-expense-logger

./: .gitignore  CMakePresets.json  Dockerfile  README.md  docker-compose.yaml
cmake/: FindSQLite3.cmake
src/: CMakeLists.txt  db_wrapper.cpp  db_wrapper.hpp  logging.cpp  logging.hpp  main.cpp
